# audio-assistant

./: .gitignore  Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md  SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  config.example.json  setup-audio.sh
src/: audio_capture.rs  config.rs  main.rs  summarization.rs  transcription.rs
