[package]
name = "audio-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI framework
eframe = "0.24"
egui = "0.24"

# Audio capture and processing
cpal = "0.15"
hound = "3.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for OpenAI API
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dirs = "5.0"

# Logging
env_logger = "0.11"
